--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "tap \"test/**/*.test.js\"",
+    "test_specy": "TEST=true NODE_NO_WARNINGS=1 tap -c --reporter=specy --no-coverage \"test/**/*.test.js\"",
+    "test": "TEST=true NODE_NO_WARNINGS=1 tap -c --bail --no-coverage \"test/**/*.test.js\"",
     "dev": "nodemon server.js",
     "start": "node server.js &"
   },
@@ -26,9 +27,12 @@
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
     "@fastify/sensible": "^4.1.0",
+    "bcrypt": "^5.0.1",
     "fastify": "^4.0.0",
     "fastify-cli": "^4.4.0",
     "fastify-plugin": "^3.0.0",
+    "got": "^12.3.1",
+    "jsonwebtoken": "^8.5.1",
     "path": "^0.12.7",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1",
