--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test_specy": "TEST=true NODE_NO_WARNINGS=1 tap -c --reporter=specy --no-coverage \"test/**/*.test.js\"",
     "test": "TEST=true NODE_NO_WARNINGS=1 tap -c --bail --no-coverage \"test/**/*.test.js\"",
     "dev": "nodemon server.js",
-    "start": "node server.js &"
+    "start": "node server.js 2>/dev/null 1>/dev/null&"
   },
   "repository": {
     "type": "git",
